# rocket-web-server

./: Cargo.toml  Rocket.toml
src/: main.rs
src/catcher/: catcher.rs  mod.rs
src/data_guard/: mod.rs  user_data_guard.rs
src/db/: mod.rs
src/db/model/: book_model.rs
src/db/repository/: book_repository.rs
src/db/schema/: book_schema.rs  mod.rs
src/fairing/: mod.rs  request_log_fairing.rs
src/request_guard/: api_key_request_guard.rs  mod.rs
src/route/: mod.rs
src/route/book_route/: mod.rs  route.rs  tests.rs
src/route/user_route/: mod.rs  route.rs
src/template/: mod.rs  route.rs
templates/: 404.html.hbs  index.html.hbs
