[package]
name = "rocket_web_server"
version = "0.1.0"
edition = "2021"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.diesel]
version = "2"
features = ["postgres"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_postgres"]
